--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
   google_maps_flutter: ^2.14.0
+  image_picker: ^1.1.2
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: Adamina
+      fonts:
+        - asset: whos_got_what_repo_flutter/Adamina/Adamina-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
