--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.9.0
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
+  url_launcher: ^6.3.2
   google_maps_flutter: ^2.14.0
   image_picker: ^1.1.2
   geolocator: ^13.0.1
@@ -83,6 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/video/
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
 
