--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,12 @@ dependencies:
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
   url_launcher: ^6.3.2
+  http: ^1.2.2
   google_maps_flutter: ^2.14.0
   image_picker: ^1.1.2
   geolocator: ^13.0.1
   video_player: ^2.10.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
